deploy; prepare to release 1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>me.itworksfor.tb</groupId>
-  <artifactId>tb</artifactId>
-  <version>1.0</version>
+  <groupId>me.telegram.borken_bot</groupId>
+  <artifactId>borken_bot</artifactId>
   <packaging>jar</packaging>
 
-  <name>tb</name>
-  <url>http://maven.apache.org</url>
+  <name>Snow Broken Robot</name>
+  <url>https://telegram.me/borken_bot</url>
+  <version>1.0</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,7 +35,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>me.itworksfor.tb.App</mainClass>
+              <mainClass>me.telegram.borken_bot.App</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
