--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>telegrambots</artifactId>
       <version>2.4.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
   </dependencies>
 
   <build>
